--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,55 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.0.0/dist/phaser.min.js"></script>
+<!doctype html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8" />
+    <title>Making your first Phaser 3 Game - Part 1</title>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.1.1/dist/phaser.js"></script>
+    <style type="text/css">
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
 
-    <script>
+<script type="text/javascript">
+
     var config = {
         type: Phaser.AUTO,
         width: 800,
         height: 600,
-        physics: {
-            default: 'arcade',
-            arcade: {
-                gravity: { y: 200 }
-            }
-        },
         scene: {
             preload: preload,
-            create: create
+            create: create,
+            update: update
         }
     };
+
     var game = new Phaser.Game(config);
+
     function preload ()
     {
-        this.load.setBaseURL('http://labs.phaser.io');
-        this.load.image('sky', 'assets/skies/space3.png');
-        this.load.image('logo', 'assets/sprites/phaser3-logo.png');
-        this.load.image('red', 'assets/particles/red.png');
+         this.load.image('sky', 'images/sky.png');
+         this.load.image('ground', 'images/platform.png');
+         this.load.image('star', 'images/star.png');
+         this.load.image('bomb', 'images.png');
+         this.load.spritesheet('dude', 
+        'src/games/firstgame/assets/dude.png',
+        { frameWidth: 32, frameHeight: 48 }
+    );
     }
+
     function create ()
+    
     {
         this.add.image(400, 300, 'sky');
-        var particles = this.add.particles('red');
-        var emitter = particles.createEmitter({
-            speed: 100,
-            scale: { start: 1, end: 0 },
-            blendMode: 'ADD'
-        });
-        var logo = this.physics.add.image(400, 100, 'logo');
-        logo.setVelocity(100, 200);
-        logo.setBounce(1, 1);
-        logo.setCollideWorldBounds(true);
-        emitter.startFollow(logo);
     }
-    </script>
+
+    function update ()
+    {
+    }
+
+</script>
 
 </body>
-</html>
+</html
